--- a/assets/scss/__variables.scss
+++ b/assets/scss/__variables.scss
@@ -7,6 +7,7 @@ $maxWidth: 3440;
 $maxWidthContainer: 1560;
 $minWidthContainer: 280;
 $gutter: 20px;
+$transitionTime: 0.3s;
 
 //Брейкпоинты
 $maxDesktopWidth: 3440px;
