--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -80,3 +80,12 @@ body, html {
 a {
   text-decoration: none;
 }
+
+.swiper-slide img {
+  overflow: hidden;
+  transition: 0.3s;
+}
+.swiper-slide-active:has(.case) img {
+  scale: 2.1;
+  transition: 0.3s;
+}
