--- a/assets/scss/__colors.scss
+++ b/assets/scss/__colors.scss
@@ -4,7 +4,12 @@ $gray: #A9A9A9;
 $dark-gray: #5A5A5A;
 $red: #E25557;
 
-.bg-black {
-    background-color: $black;
+.bgBlack {
+    background-color: $black !important;
     color: $white;
+}
+
+.bgWhite {
+    background-color: $white;
+    color: $black;
 }
